--- a/Turistapp4/Turistapp4.Windows/Turistapp4.Windows.csproj
+++ b/Turistapp4/Turistapp4.Windows/Turistapp4.Windows.csproj
@@ -114,8 +114,11 @@
     <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="Model\Kategori.cs" />
     <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="View\MainPage2.xaml.cs">
-      <DependentUpon>MainPage2.xaml</DependentUpon>
+    <Compile Include="View\item2.xaml.cs">
+      <DependentUpon>item2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ItemsPage2.xaml.cs">
+      <DependentUpon>ItemsPage2.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\SearchResultsPage1.xaml.cs">
       <DependentUpon>SearchResultsPage1.xaml</DependentUpon>
@@ -138,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.scale-100.png" />
+    <Content Include="Assets\Pop.jpg" />
     <Content Include="Assets\roskilde.png" />
     <Content Include="Assets\rostorv.jpg" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
@@ -145,7 +149,11 @@
     <Content Include="Assets\StoreLogo.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="View\MainPage2.xaml">
+    <Page Include="View\item2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ItemsPage2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
